---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann

---------------------------
  Jackdmp changes log
---------------------------

2008-02-08 Stephane Letz  <letz@grame.fr>
		
	* More robust external API.

2008-02-07 Stephane Letz  <letz@grame.fr>
		
	* Correct "server_connect": close the communication channel.

2008-02-05 Stephane Letz  <letz@grame.fr>
		
	* Reduce WaitGraphChange wait value.
	* Remove use of assert in JackFifo, JackMachSemaphore, and JackPosixSemaphore: print an error instead.

2008-02-03 Stephane Letz  <letz@grame.fr>

	* Add "Readme" file from package in src folder.
	* Tim Blechmann sse optimization patch for JackaudioPort::MixAudioBuffer, use of Apple Accelerate framework on OSX.

2008-02-02 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann patches.

2008-02-01 Stephane Letz  <letz@grame.fr>

	* Move transport related methods from JackEngine to JackServer.
	* Finish port connection callback server side implementation.

2008-01-31 Stephane Letz  <letz@grame.fr>

	* Remove checking thread in CoreAudio driver, better device state change recovery strategy: the driver is stopped and restarted.
	* jack_thread_wait implementation.
	* Add jack_thread_wait client example.
	* Add jack_mp_thread_wait client example.

2008-01-30 Stephane Letz  <letz@grame.fr>
	
	* Latest jack_lsp code from jack SVN.
	* Update in usx2y.c and JackPort.cpp to match jackd 0.109.2.

2008-01-29 Stephane Letz  <letz@grame.fr>
	
	* Implement jack_recompute_total_latency and jack_recompute_total_latencies.
	* Remove fBufferSize field in JackGraphManager object.
	* Port connection callback, client side.

2008-01-28 Stephane Letz  <letz@grame.fr>

	* Updated API to match jack 0.109.0 version (in progress). Correct checking thread in CoreAudio driver.
	* Port connection callback, server side.