@@ -81,7 +81,6 @@ class JackPort
         const char* GetName() const;
         const char* GetShortName() const;
         int	SetName(const char* name);
-		void Rename(const char* name, int index);
 		
 		int GetAliases(char* const aliases[2]);
 		int SetAlias(const char* alias);
