@@ -17,6 +17,10 @@ Tim Blechmann
   Jackdmp changes log
 ---------------------------
 
+2008-02-11 Stephane Letz  <letz@grame.fr>
+		
+	* Use SetAlias for port naming. Use jackd midi port naming scheme.
+
 2008-02-08 Stephane Letz  <letz@grame.fr>
 		
 	* More robust external API.
